@@ -69,7 +69,7 @@ viewerclasses: .viewerclasses
 	mkdir -p classes
 	$(JAVAC) -d classes $(JCFLAGS) $(SRCDIR)/dbus/viewer/*.java
 	touch .viewerclasses 
-.classes: $(SRCDIR)/*.java $(SRCDIR)/dbus/*.java $(SRCDIR)/Hal/*.java  
+.classes: $(SRCDIR)/*.java $(SRCDIR)/dbus/*.java  
 	mkdir -p classes
 	$(JAVAC) -d classes $(JCFLAGS) $^
 	touch .classes
@@ -96,7 +96,7 @@ libdbus-java.so: dbus-java.o
 	$(LD) $(LDFLAGS) -fpic -shared -o $@ $^ $(LIBS)
 	$(STRIP) $@
 libdbus-java-$(VERSION).jar: .classes
-	(cd classes; $(JAR) -cf ../$@ org/freedesktop/dbus/*.class org/freedesktop/*.class org/freedesktop/Hal/*.class)
+	(cd classes; $(JAR) -cf ../$@ org/freedesktop/dbus/*.class org/freedesktop/*.class)
 dbus-java-test-$(VERSION).jar: .testclasses
 	(cd classes; $(JAR) -cf ../$@ org/freedesktop/dbus/test/*.class)
 dbus-java-viewer-$(VERSION).jar: .viewerclasses
@@ -118,9 +118,12 @@ doc/dbus-java.ps: doc/dbus-java.dvi .doc
 doc/dbus-java.pdf: doc/dbus-java.dvi .doc
 	(cd doc; pdflatex ../dbus-java.tex)
 doc/dbus-java/index.html: dbus-java.tex .doc
-	latex2html -local_icons -dir doc/dbus-java dbus-java.tex
-doc/api/index.html: $(SRCDIR)/*.java $(SRCDIR)/dbus/*.java $(SRCDIR)/Hal/*.java .doc
-	$(JAVADOC) -quiet -author -link http://java.sun.com/j2se/1.5.0/docs/api/  -d doc/api $(SRCDIR)/*.java $(SRCDIR)/dbus/*.java $(SRCDIR)/Hal/*.java
+	mkdir -p doc/dbus-java/
+	(cd doc/dbus-java; TEX4HTENV=/etc/tex4ht/tex4ht.env htlatex ../../dbus-java.tex "xhtml,2" "" "-cvalidate")
+	rm -f doc/dbus-java/*{4ct,4tc,aux,dvi,idv,lg,lag,tmp,xref}
+	cp doc/dbus-java/dbus-java.html doc/dbus-java/index.html
+doc/api/index.html: $(SRCDIR)/*.java $(SRCDIR)/dbus/*.java .doc
+	$(JAVADOC) -quiet -author -link http://java.sun.com/j2se/1.5.0/docs/api/  -d doc/api $(SRCDIR)/*.java $(SRCDIR)/dbus/*.java 
 
 %.1: %.sgml
 	docbook-to-man $< > $@
